fix the footer align items in center

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9,7 +9,7 @@
 }
 
 /*Home page background / Gojo page backgroud */
-.HomePagebase-background, .Gojo-page-background{
+.HomePagebase-background, .Gojo-page-background, .Ryomen-page-background, .Kento-page-background{
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -28,7 +28,7 @@
   background-image: url("../image/backGround.jpeg");
 }
 
-.body-image, .Gojo-body-image{
+.body-image, .Gojo-body-image, .Ryomen-body-image, .Kento-body-image{
   z-index:2;
   width:100px;
   height:500px;
@@ -42,29 +42,42 @@
   display:flex;
   justify-content: center;
   align-items: center;
+  margin-left: 60px;
 }
 
-.Gojo-body-image{
+.Gojo-body-image, .Ryomen-body-image, .Kento-body-image{
   background-image: url("../image/Character-page.png");
   width: 200px;
   height: 100px;
   background-position: top;
 }
 
-.Gojo-page-background h1{
+.Gojo-page-background h1, .Ryomen-page-background h1, .Kento-page-background h1{
   color: white;
   display: flex;
   align-items: end;
   font-size: 110px;
+  font-family: serif;
 }
 
-/*Gojo Page*/
-.Gojo-page-background{
-  background-image: url("../image/Gojowallpaper.jpg");
+/*Gojo Page / Ryomen Page*/
+.Gojo-page-background, .Ryomen-page-background, .Kento-page-background{
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: flex-start;
+}
+
+.Gojo-page-background{
+  background-image: url("../image/Gojowallpaper.jpg");
+}
+
+.Ryomen-page-background{
+  background-image: url("../image/ryomen.png");
+}
+
+.Kento-page-background{
+  background-image: url("../image/Kento.jpg");
 }
 
 .Video-container{
@@ -266,13 +279,13 @@ footer .span-items{
   display: flex;
   align-items:center;
   justify-content: center;
-  position: relative;
+  flex-direction: row;
 }
 
-footer .media{
-  display: none;
-  align-content: center;
+footer .medias{
+  text-align: center;
 }
+
 
 footer .span-items div.instagram fa-stack fa-2x{
   /* padding-left: 100px; */
